--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@phosphor-icons/react": "^2.0.14",
     "next": "14.0.2",
     "react": "^18",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18",
     "react-vertical-timeline-component": "^3.6.0"
   },
