--- a/package.json
+++ b/package.json
@@ -1,33 +1,33 @@
 {
-  "name": "personal-portfolio-v2",
-  "version": "0.1.0",
-  "private": true,
+  "name": "nassuel-homepage",
+  "version": "1.0.0",
+  "description": "Nassuel's website",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0",
     "build": "next build",
     "start": "next start",
+    "prettier": "prettier --write .",
     "lint": "next lint"
   },
+  "keywords": [],
+  "author": "Nassuel Valera Cuevas",
+  "license": "MIT",
   "dependencies": {
-    "@phosphor-icons/react": "^2.0.14",
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@vercel/analytics": "^1.1.1",
-    "@vercel/speed-insights": "^1.0.1",
-    "next": "14.0.2",
-    "react": "^18",
-    "react-device-detect": "^2.2.3",
-    "react-dom": "^18",
-    "react-vertical-timeline-component": "^3.6.0"
+    "framer-motion": "^10.16.4",
+    "next": "^13.5.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.11.0",
+    "three": "^0.157.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/react-vertical-timeline-component": "^3.3.6",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.2",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "eslint": "^8.52.0",
+    "eslint-config-next": "^13.5.6",
+    "prettier": "^3.0.3"
   }
 }
